--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ header ul li a:hover, .active{
 }
 .alors{
 
-    color:  white;
+    color:q white;
     font-size: 30px;
     text-transform: uppercase;
     transform: translateY(-140px);
